# VRV

./: Cargo.toml  README.md
examples/: simple.rs
examples/simple/: buffer.rs  camera.rs  main.rs  per_frame.rs  untitled.glb
shaders/: example.frag  example.vert  example_hmd.frag  example_hmd.vert  example_window.frag  example_window.vert
src/: lib.rs  state.rs  wrap_openxr.rs
src/context/: actions.rs  mod.rs  render_hmd.rs  render_window.rs  swapchain.rs  texture.rs
src/state/: mod.rs  openxr.rs  render_hmd.rs  render_window.rs  resize.rs  size_dependent.rs  swapchain.rs  vulkan.rs  wrap_openxr.rs  wrap_vulkan.rs  wrap_window.rs  wrap_winit.rs
src/wrap_vulkan/: base.rs  buffers.rs  command.rs  context.rs  debug.rs  descriptors.rs  device_image.rs  geometry.rs  mod.rs  pipeline.rs  render_pass.rs  renderpass.rs  surface.rs  swapchain.rs  sync.rs
tests/: simple.rs
