[package]
name = "vrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
winit = "0.26.1"
openxr = { version = "0.16.0", features = ["static"] }
ash = { version = "0.35.1+1.2.203", features = ["loaded"] }
anyhow = "1.0.53"

[dev-dependencies]
simplelog = "0.11.2"

[features]
validation_openxr = []
validation_vulkan = []
validation = ["validation_openxr", "validation_vulkan"]