[package]
name = "vrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
winit = "0.26.1"
openxr = { version = "0.16.0", features = ["static"] }
ash = { version = "0.37.0+1.3.209", features = ["loaded"] }
ash-window = "0.10.0"
anyhow = "1.0.53"
memoffset = "0.6.5"
vk-shader-macros = "0.2.7"
crevice = "0.8.0"
gltf = "1.0.0"
itertools = "0.10.3"
mint = "0.5.9"

[dev-dependencies]
simplelog = "0.11.2"

[features]
validation_openxr = []
validation_vulkan = []
validation = ["validation_openxr", "validation_vulkan"]